--- a/JS DOM Events/01-index.html
+++ b/JS DOM Events/01-index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="01-style.css">
     <title>JavaScript</title>
 </head>
 <body>
@@ -17,6 +17,6 @@
 
 
 
-    <script src="script.js"></script>
+    <script src="01-script.js"></script>
 </body>
 </html>
