--- a/JS DOM Events/02-Activity.html
+++ b/JS DOM Events/02-Activity.html
@@ -8,10 +8,22 @@
 </head>
 <body>
     
+    <h3>Generate a Random color</h3>
+
+    <br />
+
+    <button>Generate Color</button>
+
+    <br />
+
+    <br />
+
+    <div>This is your new Color</div>
 
 
 
 
+    
     <script src="02-Activity.js"></script>
 </body>
 </html>
