--- a/JavaScript API/index.html
+++ b/JavaScript API/index.html
@@ -10,6 +10,31 @@
 
 
 
+
+    <!-- <h1>Get random cat facts</h1>
+    <button>Show new fact</button>
+    <p id="result"></p> -->
+
+
+
+<!-- 
+    <h1>Get random image</h1>
+    <button>Show</button>
+    <img id="result"> -->
+
+
+
+
+
+
+
+    <input placeholder="Enter Country">
+    <button>Search</button>
+    <ul id="list"></ul>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
